k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
  namespace: devops-demo
  labels:
    app: devops-api
spec:
  type: ClusterIP
  selector:
    app: devops-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
