k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api
  namespace: devops-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devops-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api
                port:
                  number: 80
